# repositoriornc

./: .gitignore  .spark-initial-sha  .tmp_fetch_indicadores.py  .tmp_fix_rncs.py  .tmp_inspect_db.py  .tmp_inspect_db_20251022.py  ATUALIZACAO_COMPLETA.md  Abrir_RNC_System.spec  Abrir_RNC_System_Debug.spec  CORRECAO_RESPONSAVEL.md  CORRECAO_SETORES_FINAL.md  CORRECOES_PORTUGUES.md  ESTUDO_VISUALIZACAO_RNC.md  EVIDENCIAS_STANDBY.md  IPPEL_RNC.spec  Lancamento RNC.laccdb  PRD.md  README.md  README_IMPRESSAO_MELHORADA.md  RNC_System_IPPEL.spec  analyze_attribution.py  analyze_data_capabilities.py  analyze_database.py  analyze_db.py  analyze_db_structure.py  analyze_sheets.py  apply_context_migration.py  apply_field_locks_migration.py  atualizar_area_responsavel.py  auto_update_system.py  check_3_rncs.py  check_all_portuguese.py  check_ass_field.py  check_ass_responsavel.py  check_backup_data.py  check_campos_completos.py  check_dados_completos.py  check_dashboard_improved.py  check_db.py  check_db_structure.py  (+157 more)
.workspace_scripts/: check_dashboard_filters.py  get_dashboard_html.py  test_rnc_api.py
ARQUIVOS PARA PUXAR INFORMAÇÕES PARA O PAINEL/: .~lock.Levantamento RNC e Garantias 16.ods#  .~lock.Levantamento RNC e Garantias 18.ods#  .~lock.Levantamento RNC e Garantias 25.ods#  INDICADORES - NÃO CONFORMIDADES.xlsx  Levantamento RNC e Garantias 14-15.ods  Levantamento RNC e Garantias 16.ods  RELATORIO RNC 14-15.txt  (+10 more)
services/haskell_tools/: haskell-tools.cabal
services/haskell_tools/app/: Main.hs
services/rust_images/: Cargo.toml
services/rust_images/src/: main.rs
(+668 files in other folders)
