cabal-version:       2.4
name:                haskell-tools
version:             0.1.0.0
build-type:          Simple

executable haskell-tools
  hs-source-dirs:   app, src
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base >=4.14 && <5,
                    scotty >=1.7,
                    aeson >=2.0,
                    text >=1.2,
                    bytestring >=0.10,
                    wai >=3.2,
                    warp >=3.3,
                    transformers
