[package]
name = "rust_images"
version = "0.1.0"
authors = ["IPPEL"]
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
imageproc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
